# booboo

./: .gitignore  README.md  package-lock.json  package.json  restart.ps1
src-tauri/: Cargo.toml  build_error.txt  build_error2.txt  build_error3.txt  check_final.txt  check_last.txt  check_log.txt  error_context.txt  errors_only.txt  head_error.txt  tauri.conf.json  visible_errors.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  ocr_core.rs  paddle_ocr_engine.rs  translate.rs
src/lib/: CaptureOverlay.svelte
src/routes/: +page.svelte  Settings.svelte
src/routes/pin/: +page.svelte
