[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8.10"
base64 = "0.22.1"
image = "0.25.1"
arboard = "3.4.0"
tauri-plugin-global-shortcut = "2"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1.3"
windows = { version = "0.56.0", features = ["Media_Ocr", "Graphics_Imaging", "Storage_Streams", "Foundation", "Foundation_Collections", "Win32_System_Com", "Globalization", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
once_cell = "1.19.0"
sha2 = "0.10.9"
hex = "0.4.3"
hmac = "0.12.1"
chrono = "0.4.43"

# Enable high optimizations for dependencies in dev mode
# This is crucial for performance of heavy crates like 'image' and 'base64'
[profile.dev.package."*"]
opt-level = 3

